--- a/package.json
+++ b/package.json
@@ -9,10 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "expo": "~47.0.9",
+    "expo-blur": "^12.0.1",
+    "expo-camera": "^13.1.0",
+    "expo-image-picker": "^14.0.2",
+    "expo-permissions": "^14.0.0",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "^2.0.1",
+    "expo-updates": "^0.15.6",
+    "native-base": "^3.4.25",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-bell-icon": "^1.0.1",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.10",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
