--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
@@ -27,16 +28,19 @@
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "^2.0.1",
     "expo-updates": "^0.15.6",
+    "heroicons": "^2.0.13",
     "native-base": "^3.4.25",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-bell-icon": "^1.0.1",
     "react-dom": "18.1.0",
+    "react-icons": "^4.7.1",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
@@ -48,7 +52,8 @@
     "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
