--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@expo/webpack-config": "^0.17.2",
+    "@formatjs/intl-datetimeformat": "^6.4.3",
+    "@formatjs/intl-displaynames": "^6.2.3",
+    "@formatjs/intl-getcanonicallocales": "^2.0.5",
+    "@formatjs/intl-listformat": "^7.1.7",
+    "@formatjs/intl-locale": "^3.0.11",
+    "@formatjs/intl-numberformat": "^8.3.3",
+    "@formatjs/intl-pluralrules": "^5.1.8",
+    "@formatjs/intl-relativetimeformat": "^11.1.8",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/picker": "^1.8.1",
@@ -23,6 +31,7 @@
     "expo-blur": "^12.0.1",
     "expo-camera": "^13.1.0",
     "expo-image-picker": "^14.0.2",
+    "expo-localization": "~14.0.0",
     "expo-permissions": "^14.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -41,6 +50,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.1.2",
+    "react-native-paper-dates": "^0.11.11",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
