--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "gst-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,6 +21,8 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/app": "^17.0.0",
+    "@react-native-firebase/messaging": "^17.0.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
@@ -30,9 +31,12 @@
     "expo": "~47.0.9",
     "expo-blur": "^12.0.1",
     "expo-camera": "^13.1.0",
+    "expo-device": "^5.0.0",
     "expo-document-picker": "~11.0.1",
     "expo-image-picker": "^14.0.2",
+    "expo-linking": "^3.3.0",
     "expo-localization": "~14.0.0",
+    "expo-notifications": "^0.17.0",
     "expo-permissions": "^14.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
